--- a/assets/css/min.css
+++ b/assets/css/min.css
@@ -90,6 +90,7 @@ aside {
   border-radius: 50%;
   float: right;
   width: 20%;
+  aspect-ratio: 1;
 }
 
 .me h1 {
